Add the draft of the article about hugo website

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ pygmentsStyle = "emacs"
 pygmentsUseClasses = false
 
 [params]
-  description = "To move forward, to avoid losing time on the same things"
+  description = "To move forward and to avoid losing time on the same things"
   dateFormat = "2006, Jan 2"
   copyrightOwner = "Guillaume Sempe"
   copyrightStartYear = "2017"
