Add google analytics tracking id

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ copyright = ""
 theme = "minimo"
 
 disqusShortname = ""
-googleAnalytics = ""
+googleAnalytics = "UA-105858064-1"
 Paginate = 5
 
 preserveTaxonomyNames = true
