Remove unused custom CSS file

--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ pygmentsUseClasses = false
   copyrightStartYear = "2017"
   favicon = "favicon.ico"
   hideEntryNavigation = false
-  customCSS = ["css/prism.css", "css/custom.css"]
+  customCSS = ["css/prism.css"]
   customJS = ["js/prism.js", "js/custom.js"]
   hideSocialMenu = false
   showReadTime = true
